--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,13 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="d-flex flex-column justify-content-center align-items-center" style="min-height: 100%;">
+	<script src="/assets/countdown.min.js"></script>
+	
 	<div class="my-3">
 		<img id="eventLogo" width="300">
 	</div>
 	<h4 id="eventChapter"></h4>
+	<h4 id="eventCountdown"></h4>
 
 	<table id="eventTable" class="table table-hover table-warning" style="max-width: 40rem;">
 		<thead>
@@ -50,6 +53,14 @@
 			}
 		}
 
+		let eventEndsAt
+		function loopTimer() {
+			if(eventEndsAt) {
+				document.getElementById("eventCountdown").innerText = countdown(eventEndsAt).toString() || "Event ended."
+			}
+		}
+		setInterval(loopTimer, 500)
+
 		async function updateLeaderboard() {
 			const table = document.getElementById("eventTable")
 			const errorMsg = document.getElementById("errorMsg")
@@ -60,6 +71,9 @@
 			document.getElementById("eventLogo").setAttribute("src", `assets/${eventData.name_key}.png`)
 			if(eventData.chapter) {
 				document.getElementById("eventChapter").innerText = eventData.chapter + " chapter"
+			}
+			if(eventData.ends_at) {
+				eventEndsAt = new Date(eventData.ends_at)
 			}
 
 			const lbData = data.rankings
