--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,16 @@
 	<title>seka.ing - Event Tracker</title>
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link href="/assets/flipdown.min.css" rel="stylesheet">
 </head>
 <body class="d-flex flex-column justify-content-center align-items-center" style="min-height: 100%;">
-	<script src="/assets/countdown.min.js"></script>
+	<script src="/assets/flipdown.min.js"></script>
 	
 	<div class="my-3">
 		<img id="eventLogo" width="300">
+		<img id="eventChapterCharacter" width="90">
 	</div>
-	<h4 id="eventChapter"></h4>
-	<h4 id="eventCountdown"></h4>
+	<div id="eventCountdown" class="flipdown mb-3"></div>
 
 	<table id="eventTable" class="table table-hover table-warning" style="max-width: 40rem;">
 		<thead>
@@ -53,14 +54,7 @@
 			}
 		}
 
-		let eventEndsAt
-		function loopTimer() {
-			if(eventEndsAt) {
-				document.getElementById("eventCountdown").innerText = countdown(eventEndsAt).toString() || "Event ended."
-			}
-		}
-		setInterval(loopTimer, 500)
-
+		let timerStarted = false
 		async function updateLeaderboard() {
 			const table = document.getElementById("eventTable")
 			const errorMsg = document.getElementById("errorMsg")
@@ -69,11 +63,15 @@
 			
 			const eventData = data.event
 			document.getElementById("eventLogo").setAttribute("src", `assets/${eventData.name_key}.png`)
-			if(eventData.chapter) {
-				document.getElementById("eventChapter").innerText = eventData.chapter + " chapter"
+			if(eventData.chapter_character) {
+				document.getElementById("eventChapterCharacter").setAttribute("src", `assets/character_${chapter_character}.png`)
 			}
-			if(eventData.ends_at) {
-				eventEndsAt = new Date(eventData.ends_at)
+			if(eventData.ends_at && !timerStarted) {
+				timerStarted = true
+				
+				const eventEndsAt = new Date(eventData.ends_at)
+				const flipdown = new FlipDown(Math.floor(eventEndsAt.getTime()/1000), "eventCountdown", {theme: "light"})
+				flipdown.start()
 			}
 
 			const lbData = data.rankings
