--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link href="/assets/flipdown.min.css" rel="stylesheet">
+	<style>
+		.table-row-tracked {
+			--bs-table-bg: #ffc0cb;
+			--bs-table-hover-bg: #efafbb;
+		}
+	</style>
 </head>
 <body class="d-flex flex-column justify-content-center align-items-center" style="min-height: 100%;">
 	<script src="/assets/flipdown.min.js"></script>
@@ -55,6 +61,7 @@
 		}
 
 		let timerStarted = false
+		let trackHash
 		async function updateLeaderboard() {
 			const table = document.getElementById("eventTable")
 			const errorMsg = document.getElementById("errorMsg")
@@ -121,7 +128,7 @@
 				avgCell.innerText = !!slot.average ? "+" + formatNumber(Math.floor(slot.average)) : "-"
 
 				if([3, 10, 50].includes(slot.rank - 1)) {
-					tableRow.setAttribute("class", "table-group-divider")
+					tableRow.classList.add("class", "table-group-divider")
 				}
 
 				rankCell.setAttribute("class", "fw-bold text-center")
@@ -135,6 +142,21 @@
 				tableRow.appendChild(avgCell)
 
 				tableBody.appendChild(tableRow)
+				if(trackHash === slot.hash) {
+					tableRow.classList.add("table-row-tracked")
+					tableRow.scrollIntoView({behavior: "smooth", block: "center"})
+				}
+
+				tableRow.addEventListener("click", function() {
+					if(trackHash === slot.hash) {
+						trackHash = null
+						this.classList.remove("table-row-tracked")
+					} else {
+						trackHash = slot.hash
+						document.querySelector(".table-row-tracked")?.classList?.remove("table-row-tracked")
+						this.classList.add("table-row-tracked")
+					}
+				})
 			}
 		}
 
