--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,10 @@
 	
 	<p id="errorMsg" style="display: none;">Failed to fetch updated leaderboard. Try again later.</p>
 
+	<footer class="py-3">
+		<span>Contact: neo@seka.ing</span>
+	</footer>
+
 	<script>
 		function formatNumber(num) {
 			return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",")
