--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,20 @@
 		<span>We're experiencing issues. The leaderboard might not be up to date!</span>
 	</div>
 	
-	<div class="my-3">
-		<img id="eventLogo" width="300">
-		<img id="eventChapterCharacter" width="90">
+	<div id="logoContainer" class="my-3 d-flex justify-content-center align-items-center gap-1">
+		<span id="eventLogoPlaceholder" class="placeholder-glow" style="width: 300px; height: 128px;">
+			<span class="placeholder rounded-4 w-100 h-100"></span>
+		</span>
+		<img style="display: none;" id="eventLogo" width="300" height="128">
+		<img style="display: none;" id="eventChapterCharacter" width="90" height="90">
 	</div>
-	<div id="eventCountdown" class="flipdown mb-3"></div>
 
-	<div class="row w-100 justify-content-center">
+	<div id="eventCountdownPlaceholder" class="flipdown mb-3 placeholder-glow">
+		<span class="placeholder rounded-4 w-100 h-100"></span>
+	</div>
+	<div style="display: none;" id="eventCountdown" class="flipdown mb-3"></div>
+
+	<div id="rankingContainer" class="row w-100 justify-content-center">
 		<div class="col-auto">
 			<div class="card bg-white">
 				<div class="card-body">
@@ -43,6 +50,306 @@
 							</tr>
 						</thead>
 						<tbody id="eventTableBody" class="table-group-divider">
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-8"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-4"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-6"></span></td>
+							</tr>
+							<tr>
+								<td class="placeholder-glow" colspan="5"><span class="placeholder col-10"></span></td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
@@ -59,6 +366,27 @@
 	<script>
 		function formatNumber(num) {
 			return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",")
+		}
+
+		function toggleIssuesBanner(toggled) {
+			document.getElementById("issuesBanner").style.display = toggled ? "" : "none"
+		}
+
+		function toggleFailureMessage(toggled) {
+			const rankingContainer = document.getElementById("rankingContainer")
+			const logoContainer = document.getElementById("logoContainer")
+			const logoPlaceholder = document.getElementById("eventCountdownPlaceholder")
+			const errorMsg = document.getElementById("errorMsg")
+
+			if(toggled) {
+				rankingContainer.style.setProperty("display", "none", "important")
+				logoContainer.style.setProperty("display", "none", "important")
+				logoPlaceholder.style.setProperty("display", "none", "important")
+				errorMsg.style.display = ""
+			} else {
+				rankingContainer.style.display = logoContainer.style.display = ""
+				errorMsg.style.display = "none"
+			}
 		}
 
 		async function getLeaderboard() {
@@ -81,41 +409,43 @@
 		let trackHash = localStorage.getItem("trackHash")
 		async function updateLeaderboard() {
 			const table = document.getElementById("eventTable")
-			const errorMsg = document.getElementById("errorMsg")
 
 			const data = await getLeaderboard()
 			if(!data) {
-				document.getElementById("issuesBanner").style.display = ""
+				if(!timerStarted) {
+					toggleFailureMessage(true)
+				} else {
+					toggleIssuesBanner(true)
+				}
 				return
 			}
 			
+			toggleFailureMessage(false)
 			if(data.update_error) {
-				document.getElementById("issuesBanner").style.display = ""
+				toggleIssuesBanner(true)
 			} else {
-				document.getElementById("issuesBanner").style.display = "none"
+				toggleIssuesBanner(false)
 			}
 			
 			const eventData = data.event
+			document.getElementById("eventLogoPlaceholder").style.display = "none"
 			document.getElementById("eventLogo").setAttribute("src", `assets/${eventData.name_key}.png`)
+			document.getElementById("eventLogo").style.display = ""
 			if(eventData.chapter_character) {
+				document.getElementById("eventChapterCharacter").style.display = ""
 				document.getElementById("eventChapterCharacter").setAttribute("src", `assets/character_${eventData.chapter_character}.png`)
+			} else {
+				document.getElementById("eventChapterCharacter").style.display = "none"
 			}
 			if(eventData.ends_at && !timerStarted) {
 				timerStarted = true
+
+				document.getElementById("eventCountdownPlaceholder").style.display = "none"
+				document.getElementById("eventCountdown").style.display = ""
 				
 				const eventEndsAt = new Date(eventData.ends_at)
 				const flipdown = new FlipDown(Math.floor(eventEndsAt.getTime()/1000), "eventCountdown", {theme: "light"})
 				flipdown.start()
-			}
-
-			const lbData = data.rankings
-			if(!lbData) {
-				table.style.display = "none"
-				errorMsg.style.removeProperty("display")
-				return
-			} else {
-				table.style.removeProperty("display")
-				errorMsg.style.display = "none"
 			}
 
 			const tableBody = document.getElementById("eventTableBody")
@@ -124,7 +454,7 @@
 			}
 
 			let scrollTo
-			for(const slot of lbData) {
+			for(const slot of data.rankings) {
 				const tableRow = document.createElement("tr")
 
 				const rankCell = document.createElement("td")
