add alt text to images

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
 		<span id="eventLogoPlaceholder" class="placeholder-glow" style="width: 300px; height: 128px;">
 			<span class="placeholder rounded-4 w-100 h-100"></span>
 		</span>
-		<img style="display: none;" id="eventLogo" width="300" height="128">
-		<img style="display: none;" id="eventChapterCharacter" width="90" height="90">
+		<img style="display: none;" id="eventLogo" alt="Event logo" width="300" height="128">
+		<img style="display: none;" id="eventChapterCharacter" alt="Worldlink chapter character" width="90" height="90">
 	</div>
 
 	<div id="eventCountdownPlaceholder" class="flipdown mb-3 placeholder-glow">
